изменена полоса прокрутки

--- a/css/style.less
+++ b/css/style.less
@@ -74,8 +74,6 @@ body {
     justify-content: space-around;
     overflow-y: scroll;
     height: 90%;
-
-
 }
 
 .canban-stickers::-webkit-scrollbar {
@@ -84,7 +82,7 @@ body {
 }
 
 .canban-stickers::-webkit-scrollbar-track {
-    background: #fff;
+    background: transparent;
     /* Цвет дорожки */
 }
 
